Made a good moving background

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <video class="background-video" autoplay loop muted playsinline>
+        <source src="videos/Background1_1.webm" type="video/webm">
+        <!-- Optionally, add a fallback image here -->
+    </video>
     <header>
         <h1>Terminality</h1>
         <nav>
