--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <video class="background-video" autoplay loop muted playsinline>
+    <video id="bg-video" autoplay muted loop playsinline>
         <source src="videos/Background1_1.webm" type="video/webm">
-        <!-- Optionally, add a fallback image here -->
+        <!-- Fallback text -->
+        Your browser does not support the video tag.
     </video>
     <header>
         <h1>Terminality</h1>
